--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "algoliasearch": "^3.1",
         "expose-loader": "^0.7.5",
         "imports-loader": "^0.8.0",
         "instantsearch.js": "^2.7.4",
