--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.0.0",
+        "php": ">=7.0.0",
         "algolia/algoliasearch-client-php": ">=1.25.1",
         "fideloper/proxy": ">=3.3",
         "guzzlehttp/guzzle": ">=6.3.2",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.6.15",
+        "laravel/framework": "v5.6.*",
         "laravel/scout": ">=4.0.0-stable",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "v5.6.*"
