--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "symfony/thanks": "^1.0"
+        "symfony/thanks": "^1.0",
+        "lanin/laravel-api-debugger": "^3.0"
     },
     "autoload": {
         "classmap": [
