--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "algoliasearch": "^3.1",
+        "export-loader": "^1.0.52",
+        "exports-loader": "^0.7.0",
         "expose-loader": "^0.7.5",
         "imports-loader": "^0.8.0",
         "instantsearch.js": "^2.7.4",
